--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
 layout: home
 author_profile: true
 header:
-    image: "C:\Users\nnnel\Desktop\calinic.github.io\images\coast.jpg"
+    image: "/images/coast.jpg"
 ---
